Adjust patient name color

--- a/style.html
+++ b/style.html
@@ -1636,7 +1636,7 @@
         }
         .armario-paciente {
             font-size: 1.2rem;
-            color: #0047b9;
+            color: #032a69;
         }
         .armario-paciente strong,
         .armario-paciente .armario-paciente-nome {
@@ -1647,7 +1647,7 @@
         }
         .armario-card.em-uso .armario-paciente,
         .armario-card.em-uso .armario-paciente .armario-paciente-nome {
-            color: #0047b9;
+            color: #032a69;
         }
         .armario-pront-leito {
             display: flex;
