Enable controlled removals in movimentacoes

--- a/index.html
+++ b/index.html
@@ -940,12 +940,12 @@
                                     </div>
                                 </div>
                                 <div class="mov-tab-panel" data-mov-panel="saida">
-                                    <p class="helper-text">Todos os itens registrados aparecem abaixo. Clique no ícone para marcar os itens que sairão.</p>
+                                    <p class="helper-text">Todos os itens registrados aparecem abaixo. Clique no ícone para definir quanto será retirado.</p>
                                     <div class="form-inline-actions space-between">
                                         <span class="pill">Listagem de saída</span>
                                         <button type="button" class="btn btn-ghost" id="mov-saida-preencher">Recarregar lista</button>
                                     </div>
-                                    <div class="info-box info-compact">Itens carregam sem edição de quantidade ou descrição. Use o ícone para marcar ou desfazer a retirada.</div>
+                                    <div class="info-box info-compact">Itens carregam sem edição direta de quantidade ou descrição. Use o ícone para escolher a quantidade retirada ou limpar a seleção.</div>
                                     <div class="form-inline-actions">
                                         <button type="button" class="btn btn-secondary" id="mov-saida-add-personalizado">O item que quero retirar não está cadastrado</button>
                                     </div>
@@ -981,7 +981,7 @@
                                     </div>
                                 </div>
                                 <div class="form-actions align-start">
-                                    <button type="submit" class="btn btn-primary">Adicionar movimentação</button>
+                                    <button type="submit" class="btn btn-primary btn-cta-mov">Atualizar Movimentação</button>
                                 </div>
                             </form>
                         </div>
