--- a/style.html
+++ b/style.html
@@ -730,6 +730,11 @@
             padding: 8px 10px;
             line-height: 1.4;
         }
+        .swal-helper-text {
+            margin: 0 0 8px 0;
+            font-size: 0.95rem;
+            color: var(--muted-color);
+        }
         .user-profile {
             display: inline-flex;
             align-items: center;
@@ -3290,6 +3295,19 @@
             cursor: pointer;
             font-weight: 600;
             transition: all 0.3s ease;
+        }
+        .btn-cta-mov {
+            font-size: 1.05rem;
+            padding: 14px 28px;
+            border-radius: 16px;
+            letter-spacing: 0.01em;
+            box-shadow: 0 18px 34px color-mix(in srgb, var(--primary-color) 42%, transparent);
+        }
+        .btn-cta-mov:hover,
+        .btn-cta-mov:focus-visible {
+            transform: translateY(-1px);
+            box-shadow: 0 22px 40px color-mix(in srgb, var(--primary-dark) 32%, transparent);
+            outline: none;
         }
         .btn.btn-disabled {
             opacity: 0.55;
