Adjust SweetAlert z-index above movement modal

--- a/style.html
+++ b/style.html
@@ -678,6 +678,14 @@
             line-height: 1;
         }
         /* SweetAlert custom form layout */
+        .swal2-container {
+            z-index: 4000 !important;
+        }
+
+        .swal2-popup {
+            z-index: 4001 !important;
+        }
+
         .swal-form-grid {
             display: flex;
             flex-direction: column;
